--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	<title>mnlst</title>
 </head>
 <body>
-		<header class="navigation">
+		<header>
 			<nav>
-			<div class="logo">
-					<img class="logo_image" src="assets/images/Logo.png">
-			</div>
+				<div class="logo">
+						<img class="logo_image" src="assets/images/Logo.png">
+				</div>
+				
 				<a class="nav_link">HOME</a>
 				<a class="nav_link">PRODUCT</a>
 				<a class="nav_link">STORE</a>
@@ -27,19 +28,19 @@
 			</nav>
 		</header>
 
-		<div class="midle_photo">
+		<main>
 			<img class="midle_human" src="assets/images/midle_human.png">
-			<span class="midle_text"><p>less is<br>more.</p></span>
-		</div>
+			<span class="slogan"><p>less is<br>more.</p></span>
+		</main>
 
 		<div class="left_text">
 			<p>Lorem ipsum dolor sit amet,<br>
 			consectetur adipiscing elit,<br>
 			Vestbulum ultrices fi......</p>
-			<strong><p class="more_link">Read More</p></strong>
+			<strong><a class="more_link">Read More</a></strong>
 		</div>
-
-		<div class="footer"><strong><p>Arlington Heights, IL</p></strong></div>
+			
+		<footer><strong><p>Arlington Heights, IL</p></strong></footer>
 		
 		<div class="footer_navigation">
 			<a href="https://facebook.com" target=_blank><img class="footer_navigation_icon" src="assets/images/Facebook.png"></a>
