Added "Gamburger" menu and its animation
Added "hamburger menu", opening animation, menu appearance, menu itself. In the future, menu styling will be added, not all objects will be closed by this menu. This stage has not been completed yet. After the code is finalized, it is planned to revise it, remove unnecessary lines, bring styles to the same writing order

--- a/index.html
+++ b/index.html
@@ -5,27 +5,38 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script src="assets/JS/Script.js"></script>
 
 	<title>mnlst</title>
 </head>
 <body>
 		<header>
-			<nav>
 				<div class="logo">
 						<img class="logo_image" src="assets/images/Logo.png">
 				</div>
 				
-				<a class="nav_link">HOME</a>
-				<a class="nav_link">PRODUCT</a>
-				<a class="nav_link">STORE</a>
-				<a class="nav_link">ABOUT US</a>
-
-				<div class="shape">
-					<a href="https://google.com" target=_blank>
-						<img class="shape_image" src="assets/images/Shape@0,25x.png">
-					</a>
+				<div class="link">
+					<a class="nav_link">HOME</a>
+					<a class="nav_link">PRODUCT</a>
+					<a class="nav_link">STORE</a>
+					<a class="nav_link">ABOUT US</a>
 				</div>
-			</nav>
+
+				<div class="gamburger">
+					<div class = "header_shape">
+						<div class="menu_shape-btn">
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</div>
+					<div class="menu_shape">
+						<a href="#" class="gamburger_link">Main</a><br/>
+						<a href="#" class="gamburger_link">About us</a><br/>
+						<a href="#" class="gamburger_link">Servises</a><br/>
+						<a href="#" class="gamburger_link">Contacts</a><br/>
+					</div>
+				</div>
 		</header>
 
 		<main>
